--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
+    ext {
+        agp_version = '7.2.2'
+    }
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "com.android.tools.build:gradle:$agp_version"
+        //classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
