--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
     ext {
         agp_version = '7.2.2'
+        kotlin_version = '1.4.10'
     }
     repositories {
         google()
-        jcenter()
+//        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$agp_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
@@ -17,7 +19,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
-        jcenter()
+//        jcenter()
         maven { url "https://jitpack.io" }
     }
 }
