--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -1,55 +1,62 @@
-apply plugin: 'com.android.library'
+plugins {
+    id("com.android.library")
+    id("kotlin-android")
+}
+
 //apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.thomas-bouvier'
+group = 'com.github.thomas-bouvier'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion = 34
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
-        consumerProguardFiles 'proguard-rules.pro'
+        versionCode = 1
+        versionName = "1.0"
+        consumerProguardFiles("proguard-rules.pro")
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
     sourceSets {
-        main.java.srcDirs += 'src/main/java'
-        androidTest.java.srcDirs += 'src/androidTest/java'
-        androidTest.resources.srcDirs += 'src/androidTest/res'
+        main.java.srcDirs += "src/main/java"
+        androidTest.java.srcDirs += "src/androidTest/java"
+        androidTest.resources.srcDirs += "src/androidTest/res"
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:4.10.3"
     testImplementation 'org.mockito:mockito-core:5.3.1'
 }
 
-task sourcesJar(type: Jar) {
+tasks.register('sourcesJar', Jar) {
     classifier = 'sources'
     from android.sourceSets.main.java.sourceFiles
 }
 
-task javadoc(type: Javadoc) {
+tasks.register('javadoc', Javadoc) {
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+tasks.register('javadocJar', Jar) {
+    dependsOn javadoc
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
 
-task classesJar(type: Jar) {
+tasks.register('classesJar', Jar) {
     from "$buildDir/intermediates/classes/release"
 }
