--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:4.11.1"
     testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
 }
 
 tasks.register('sourcesJar', Jar) {
