--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -5,14 +5,16 @@ plugins {
 
 //apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.thomas-bouvier'
+//group = 'com.github.thomas-bouvier'
 
 android {
+    namespace "com.andreuzaitsev.persistentcookiejar"
+
     compileSdkVersion = 34
 
     defaultConfig {
         minSdkVersion 25
-        targetSdkVersion 34
+        targetSdkVersion 33
         versionCode = 1
         versionName = "1.0"
         consumerProguardFiles("proguard-rules.pro")
@@ -48,11 +50,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:4.11.1"
     testImplementation 'org.mockito:mockito-core:5.11.0'
-    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
 }
 
 tasks.register('sourcesJar', Jar) {
-    classifier = 'sources'
+//    classifier = 'sources'
     from android.sourceSets.main.java.sourceFiles
 }
 
@@ -63,7 +65,7 @@ tasks.register('javadoc', Javadoc) {
 
 tasks.register('javadocJar', Jar) {
     dependsOn javadoc
-    classifier = 'javadoc'
+//    classifier = 'javadoc'
     from javadoc.destinationDir
 }
 
