--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -46,9 +46,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.test:core-ktx:1.5.0'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.robolectric:robolectric:4.11.1"
+    testImplementation "org.robolectric:robolectric:4.7.3"
     testImplementation 'org.mockito:mockito-core:5.11.0'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
 }
