--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -43,15 +43,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.test:core-ktx:1.5.0'
+    implementation "androidx.test:core-ktx:1.5.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.robolectric:robolectric:4.7.3"
-    testImplementation 'org.mockito:mockito-core:5.11.0'
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
+    testImplementation "org.mockito:mockito-core:5.11.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.2.1"
 }
 
 tasks.register('sourcesJar', Jar) {
