--- a/persistent-cookie-jar-okhttp/build.gradle
+++ b/persistent-cookie-jar-okhttp/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.7.3"
     testImplementation "org.mockito:mockito-core:5.11.0"
     testImplementation "org.mockito.kotlin:mockito-kotlin:5.2.1"
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.0")
 }
 
 tasks.register('sourcesJar', Jar) {
